k8s/kustomize/base/manifests/webui/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: skauswatch-webui
  namespace: skauswatch
  labels:
    app.kubernetes.io/name: webui
    app.kubernetes.io/component: frontend
    app.kubernetes.io/managed-by: kustomize
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: webui
